--- a/help.html
+++ b/help.html
@@ -23,9 +23,9 @@
   <div id="container">
     <nav id="nav_menu">
       <ul>
-        <li><a href="index.html" class=active>Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="gallery2.html">Gallery</a></li>
-        <li><a href="help.html">FAQ</a></li>
+        <li><a href="help.html" class=active>FAQ</a></li>
         <li><a href="#">Facility</a></li>
         <li><a href="#">Dogs</a></li>
         <li><a href="#">Cats</a></li>
