--- a/gallery2.html
+++ b/gallery2.html
@@ -32,7 +32,7 @@
       </ul>
     </nav>
     <main>
-        <h2>Gallery of my dog Bently using bootstrap:</h2>
+        <h2>Gallery of my dog Bently using bootstrap card groups:</h2>
 
         <div class="card-group">
           <div class="card">
